update searching and indexing, and docs